--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Villa Ecológica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./styles/estilo.css">
 </head>
 <body class="bg-success">
-    <div id="wrapper" class="container-fluid p-0">
+    <div id="wrapper" class="p-0">
         <!-- BARRA DE NAVEGACIÓN - COMPONENTE BOOTSTRAP 5-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-success position-sticky top-0 opacity-75" id="nav">
             <div class="container-fluid">
@@ -85,14 +85,14 @@
                     </ul>
                   </div>
                   <div class="col-xs-12 col-md-6 p-0 bg-info">
-                    <img src="./images/calendario-cultivo-huerto-verdecora_sinderechos.jpg" alt="" class="img-fluid" id="imginfo">
+                    <img src="./images/calendario-cultivo-huerto-verdecora_sinderechos.jpg" alt="" class="img-fluid p-2" id="imginfo">
                   </div>
                   <p class="bg-info">
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#masinfo" aria-expanded="false" aria-controls="collapseWidthExample">
                       Más Información
                     </button>
                   </p>
-                  <div style="min-height: 120px;" class="bg-info">
+                  <div class="bg-info">
                     <div class="collapse collapse-horizontal" id="masinfo">
                       <div class="card card-body">
                         Para crear tu propio huerto ecológico, necesitarás:
