--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Villa Ecológica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/estilo.css">
+    <link rel="shortcut icon" href="./images/frutas-verduras.jpg" type="image/x-icon">
 </head>
 <body class="bg-success">
     <div id="wrapper" class="p-0">
